# OOProject

./: .gitignore  Angajat.cpp  Angajat.h  Bucatar.cpp  Bucatar.h  CMakeLists.txt  Comanda.cpp  Comanda.h  Eroare.cpp  Eroare.h  Ingredient.cpp  Ingredient.h  Ingredient_Builder.cpp  Ingredient_Builder.h  Livrator.cpp  Livrator.h  Pizza.cpp  Pizza.h  Pizza_Factory.cpp  Pizza_Factory.h  Pizzerie.cpp  Pizzerie.h  Template.h  main.cpp
.github/workflows/: main.yml
